--- a/StockTickerExtension/StockToolWindowControl.xaml
+++ b/StockTickerExtension/StockToolWindowControl.xaml
@@ -30,13 +30,12 @@
                 <TextBox x:Name="CodeTextBox" Width="100" Text="301307" VerticalAlignment="Center" />
                 <Button x:Name="StartBtn" Content="开始监控" Margin="6,0" Width="80"/>
                 <Button x:Name="StopBtn" Content="停止监控" Margin="6,0" Width="80"/>
-                <Button x:Name="TopmostBtn" Content="窗口置顶" Margin="6,0" Width="80"/>
                 <TextBlock Text=" " Width="20"/>
                 <TextBlock Text="涨跌:" VerticalAlignment="Center" />
                 <TextBlock x:Name="ChangePercentText" Text="--%" FontWeight="Bold" Margin="6,0" VerticalAlignment="Center"/>
                 <TextBlock Text=" " Width="20"/>
+                <CheckBox x:Name="AutoStopCheckBox" Content="关闭时自动停止" IsChecked="False" Margin="6,0" VerticalAlignment="Center"/>
                 <TextBlock x:Name="StatusText" Text="请输入股票代码" VerticalAlignment="Center" Foreground="Blue"/>
-                <CheckBox x:Name="AutoStopCheckBox" Content="关闭窗口时自动停止监控" IsChecked="False" Margin="6,0" VerticalAlignment="Center"/>
             </StackPanel>
 
             <!-- 第二行：持仓信息 -->
