增加状态栏显示功能，最小化时状态栏刷新当前基本数据。切换K线图时直接刷新图表。K线图时增加鼠标滚动缩放和拖动，分时不支持。

--- a/StockTickerExtension/StockToolWindowControl.xaml
+++ b/StockTickerExtension/StockToolWindowControl.xaml
@@ -29,7 +29,7 @@
             <!-- 顶部控制面板 -->
             <StackPanel Orientation="Horizontal" Margin="6" Grid.Row="0" HorizontalAlignment="Left">
                 <TextBlock Text="Stock Code:" VerticalAlignment="Center" Margin="6,0"/>
-                <TextBox x:Name="CodeTextBox" Width="100" Text="301307" VerticalAlignment="Center" />
+                <TextBox x:Name="CodeTextBox" Width="60" Text="301307" VerticalAlignment="Center" />
                 <Button x:Name="StartBtn" Content="Start" Margin="6,0" Width="80"/>
                 <Button x:Name="StopBtn" Content="Stop" Margin="6,0" Width="80"/>
                 <TextBlock x:Name="StockName" Text="" VerticalAlignment="Center" Foreground="Blue" Margin="6,0"/>
@@ -38,7 +38,7 @@
                 <TextBlock Text=" " Width="20"/>
                 <CheckBox x:Name="AutoStopCheckBox" Content="Stop when closed" IsChecked="False" Margin="6,0" VerticalAlignment="Center"/>
                 <ComboBox x:Name="PeriodComboBox" Width="100" SelectedIndex="0" Margin="6,0"/>
-                <DatePicker x:Name="DatePickerControl" Width="130" Margin="6,0" IsEnabled="False"
+                <DatePicker x:Name="DatePickerControl" Width="110" Margin="6,0" IsEnabled="False"
                             SelectedDate="{x:Static sys:DateTime.Today}"
                             DisplayDateEnd="{x:Static sys:DateTime.Today}"
                             VerticalAlignment="Center"/>
@@ -47,12 +47,12 @@
 
             <!-- 第二行：持仓信息 -->
             <StackPanel Orientation="Horizontal" Margin="6" Grid.Row="1" HorizontalAlignment="Left">
+                <TextBlock Text="Current Price:" VerticalAlignment="Center" Margin="6,0" FontWeight="Bold"/>
+                <TextBox x:Name="CurrentPrice" Width="60" Text="" IsReadOnly="True" BorderBrush="Blue"/>
                 <TextBlock Text="Number of Shares:" VerticalAlignment="Center" Margin="6,0"/>
                 <TextBox x:Name="SharesBox" Width="80" Text="400" />
                 <TextBlock Text="Cost Price:" VerticalAlignment="Center" Margin="6,0"/>
-                <TextBox x:Name="CostBox" Width="80" Text="40.915" />
-                <TextBlock Text="Current Price:" VerticalAlignment="Center" Margin="6,0"/>
-                <TextBox x:Name="CurrentPrice" Width="80" Text="" IsReadOnly="True"/>
+                <TextBox x:Name="CostBox" Width="60" Text="40.915" />
                 <TextBlock x:Name="PositionProfitText" Text="Unrealized P/L: --" Margin="12,0"/>
                 <TextBlock x:Name="TodayProfitText" Text="Today's P/L: --" Margin="12,0"/>
             </StackPanel>
@@ -72,7 +72,7 @@
                     <RowDefinition Height="1.5*"/>
                 </Grid.RowDefinitions>
                 <scottplt:WpfPlot x:Name="WpfPlotPrice" Height="240" Grid.Row="0" HorizontalAlignment="Stretch" Margin="0,0,20,6"/>
-                <scottplt:WpfPlot x:Name="WpfPlotVolume" Height="240" Grid.Row="2" HorizontalAlignment="Stretch" Margin="0,0,20,6" />
+                <scottplt:WpfPlot x:Name="WpfPlotVolume" Height="240" Grid.Row="1" HorizontalAlignment="Stretch" Margin="0,0,20,6" />
             </Grid>
         </Grid>
     </ScrollViewer>
