--- a/StockTickerExtension/StockToolWindowControl.xaml
+++ b/StockTickerExtension/StockToolWindowControl.xaml
@@ -10,7 +10,8 @@
     <ScrollViewer VerticalScrollBarVisibility="Auto"
                   HorizontalScrollBarVisibility="Disabled"
                   VerticalAlignment="Stretch"
-                  HorizontalAlignment="Stretch">
+                  HorizontalAlignment="Stretch"
+                  PreviewMouseWheel="ScrollViewer_PreviewMouseWheel">
 
         <!-- 主布局：左对齐并水平填满 -->
         <Grid Margin="0"
@@ -28,6 +29,7 @@
 
             <!-- 顶部控制面板 -->
             <StackPanel Orientation="Horizontal" Margin="6" Grid.Row="0" HorizontalAlignment="Left">
+                <ComboBox x:Name="StockTypeComboBox" Width="80" SelectedIndex="0" Margin="6,0"/>
                 <TextBlock Text="Stock Code:" VerticalAlignment="Center" Margin="6,0"/>
                 <TextBox x:Name="CodeTextBox" Width="60" Text="301307" VerticalAlignment="Center" />
                 <Button x:Name="StartBtn" Content="Start" Margin="6,0" Width="80"/>
@@ -53,8 +55,8 @@
                 <TextBox x:Name="SharesBox" Width="80" Text="400" />
                 <TextBlock Text="Cost Price:" VerticalAlignment="Center" Margin="6,0"/>
                 <TextBox x:Name="CostBox" Width="60" Text="40.915" />
-                <TextBlock x:Name="PositionProfitText" Text="Unrealized P/L: --" Margin="12,0"/>
-                <TextBlock x:Name="TodayProfitText" Text="Today's P/L: --" Margin="12,0"/>
+                <TextBlock x:Name="PositionProfitText" Text="Total(￥): --" Margin="12,0"/>
+                <TextBlock x:Name="TodayProfitText" Text="Today(￥): --" Margin="12,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="6" Grid.Row="2" HorizontalAlignment="Left">
                 <CheckBox x:Name="MA5" Content="MA5" IsChecked="True" Margin="6,0" VerticalAlignment="Center" Foreground="Black" />
